# periscope

./: .gitignore  README.md  ch.ulys.Periscope.json  meson.build  python3-modules.json
.flatpak-builder/cache/refs/heads/x86_64-ch.ulys.Periscope.json/: build-python3-aiohttp  build-python3-expandvars  build-python3-modules  build-python3-pydub  build-python3-xdg-base-dirs  init
.flatpak-builder/checksums/: x86_64-ch.ulys.Periscope.json
.flatpak-builder/downloads/63f6ebc1721ced2e86c340856e004ef829501a30a37e17079c52cfaf0e1741b9/: xdg_base_dirs-6.0.1-py3-none-any.whl
.flatpak-builder/downloads/c1de0d62698fb0e69e20d163186beda7ecf3dc1cee687cdb401bb7bc550fa763/: py_opensonic-5.0.5-py3-none-any.whl
data/: ch.ulys.Periscope.desktop.in  ch.ulys.Periscope.gschema.xml  ch.ulys.Periscope.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  periscope.gresource.xml  periscope.in
src/model/: async_loop.py  config.py  cover_cache.py  player.py
src/model/api/: errors.py  medias.py  subsonic.py
src/view/: album_view.blp  album_view.py  cover_image.py  cover_thumbnail.blp  cover_thumbnail.py  song_grid.blp  song_grid.py  song_player.blp  song_player.py  song_thumbnail.blp  song_thumbnail.py  window.blp  window.py
